# bergner-2026

./: .gitignore  AGENTS.md  README.md  afk-prompt.txt  pyproject.toml
auto/: Makefile  README.md
auto/src/: bs2026_evaluator.f90
backlog/: config.yml
backlog/tasks/: task-001 - Create-Episode-2-scaffold-and-reusable-continuation-primitives.md  task-002 - Implement-Figure-1-Python-continuation-and-analytic-approximation-comparison.md  task-003 - Extract-and-digitize-high-resolution-Figure-1-from-PDF.md  task-004 - Produce-Figure-1-reproduction-plot-and-comparison-summary.md  task-005 - Explore-property-based-tests-for-model-and-continuation-utilities.md  task-006 - Update-repository-guidance-for-shared-backend-directories.md  task-007 - Create-Episode-3-scaffold-and-AUTO-planning-docs.md  task-008 - Document-property-based-testing-strategy-for-model-and-backend-comparisons.md  task-009 - Implement-shared-legible-AUTO-Fortran-model-core.md  task-010 - Add-Python-driven-Fortran-model-equivalence-tests.md  task-011 - Implement-AUTO-Figure-1-log-w-continuation.md  task-012 - Normalize-AUTO-outputs-to-backend-neutral-branch-schema.md  task-013 - Compare-AUTO-Figure-1-results-against-Python-and-paper-benchmarks.md  (+18 more)
docs/: MODEL_EXTRACTION.md  NOX_LOCA_BACKEND.md  PHASE2_IMPLEMENTATION.md  REPRODUCTION_NOTES.md  SOURCE_QUALITY.md  testing.md
loca/: CMakeLists.txt
loca/include/bergner_spichtinger_2026_loca/: model.hpp  nox_loca_backend.hpp
loca/src/: model_cli.cpp
tests/: test_approximations.py  test_core.py  test_episode3_auto_figure1.py  test_episode4_loca_continuation.py  test_episode4_loca_scaffold.py  test_episode5_auto_figure2.py  test_episode5_backend_comparison.py  test_episode5_loca_figure2.py  test_episode5_python_figure2.py  test_episode6_auto_hopf.py  test_episode6_backend_comparison.py  test_episode6_loca_hopf.py  test_episode6_python_hopf.py  test_figure1_backend_comparison.py  test_fortran_model_core.py  test_hopf.py  test_loca_compile_commands.py  test_loca_model_core.py  test_nox_loca_backend.py  test_residuals_continuation.py  test_stability.py  test_units.py
(+217 files in other folders)
