[project]
name = "bergner-spichtinger-2026"
version = "0.1.0"
description = "Extraction workspace for Bergner & Spichtinger (2026), Ice clouds as nonlinear oscillators."
readme = "README.md"
authors = [
    { name = "Ian Ross", email = "ian@skybluetrades.net" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "xarray",
    "matplotlib",
    "pint",
    "beautifulsoup4",
    "lxml",
    "html5lib",
    "pypdf",
    "pyyaml",
    "pytest",
    "ipykernel",
    "jupyterlab",
]

[project.scripts]
inspect-html = "bergner_spichtinger_2026:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
